# nss-windns

./: README.md
.github/workflows/: build.yml
linux/: CMakeLists.txt  force_windns.cpp  nss_windns.cpp  test.cpp
windows/: CMakeLists.txt  windns_proxy.cpp
